--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "env-cmd": "^10.1.0",
+    "heroku": "^7.7.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^5.3.3",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^2.1.3",
     "react-top-loading-bar": "^2.1.0",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.19"
