--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "newsapp",
+  "homepage": "https://noone-21.github.io/DaffodilNews",
   "version": "0.1.0",
   "private": true,
   "engines": {
@@ -10,17 +11,20 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "env-cmd": "^10.1.0",
-    "heroku": "^7.7.8",
+    "gh-pages": "^4.0.0",
+    "heroku": "^7.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^5.3.3",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "react-top-loading-bar": "^2.1.0",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.19"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "env-cmd -f ./config/dev.env react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
