--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "18.x"
+    "node": "18.7.0",
+    "npm": "8.15.0"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
