--- a/package.json
+++ b/package.json
@@ -1,31 +1,26 @@
 {
   "name": "newsapp",
-  "homepage": "https://noone-21.github.io/DaffodilNews",
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "18.7.0",
-    "npm": "8.15.0"
+    "node": "18.x"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "env-cmd": "^10.1.0",
-    "gh-pages": "^4.0.0",
-    "heroku": "^7.3.0",
+    "heroku": "^7.7.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^5.3.3",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^2.1.3",
     "react-top-loading-bar": "^2.1.0",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.19"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "env-cmd -f ./config/dev.env react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
