--- a/package.json
+++ b/package.json
@@ -5,6 +5,12 @@
   "engines": {
     "node": "18.x"
   },
+  "husky": {
+    "hooks": {
+      "pre-push": "env-cmd -f ./config/dev.env npm run build && surge --project ./build --domain daffodil-news.surge.sh"
+    }
+  },
+  "homepage": "http://noone-21.github.io/DaffodilNews",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -14,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-infinite-scroller": "^1.2.6",
     "react-router-dom": "^5.3.3",
     "react-scripts": "^2.1.3",
     "react-top-loading-bar": "^2.1.0",
@@ -43,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "husky": "^8.0.1"
   }
 }
