--- a/package.json
+++ b/package.json
@@ -16,20 +16,22 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "env-cmd": "^10.1.0",
-    "heroku": "^7.7.8",
+    "heroku": "^7.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-infinite-scroller": "^1.2.6",
-    "react-router-dom": "^5.3.3",
-    "react-scripts": "^2.1.3",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1",
     "react-top-loading-bar": "^2.1.0",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.19"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "env-cmd -f ./config/dev.env react-scripts start",
-    "build": "react-scripts build",
+    "build": "env-cmd -f ./config/dev.env react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -52,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^4.0.0",
     "husky": "^8.0.1"
   }
 }
